fix: person contact link bar alignment

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-person/_m-person.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-person/_m-person.scss
@@ -86,7 +86,7 @@
 	}
 
 	&__contact {
-		margin: 0.5em 0;
+		margin: 0.2em 0;
 	}
 
 	&__social-media {
